--- a/portfolio.html
+++ b/portfolio.html
@@ -1,188 +1,204 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="css/styles.css" type="text/css" />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"rel="stylesheet"/>
-    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
-    <title>Portfolio</title>
+    <!-- <meta charset="UTF-8" />
+     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   -->
+    <title>WebStudio</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <section>
+    <!--HEADER Section-->    
+    <header class="page-header">
       <div class="container">
-      <header class="page-header">
-        <ul class="header-nav-buttons unstyled-list">
-          <li>
-            <a href="portfolio.html" class="logo link"
-              ><span class="logo-highlight">Web</span>Studio</a
-            >
+        <a class="logo link" href="index.html">
+          <h2>Web<span>Studio</span></h2>
+        </a>
+        <nav>
+          <ul class="main-nav-list unstyled-list">
+            <li class="main-nav-item">
+              <a class="main-nav-link link" href="index.html">Studio</a>
+            </li>
+            <li class="main-nav-item">
+              <a class="main-nav-link link" href="portofolio.html"
+                >Portofolio</a
+              >
+            </li>
+            <li class="main-nav-item">
+              <a class="main-nav-link link" href="contacts.html">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="contact-list unstyled-list">
+          <li class="contact-list-item">
+            <a class="contact-nav-link link" href="mailto:info@devstudio.com">
+              <svg class="icon-mail">
+                <use href="./images/icons/icons.svg#icon_mail"></use>
+              </svg>
+              info@devstudio.com
+            </a>
+            <!--<use href="./images/icons.svg#icon-envelope"></use>-->
           </li>
-          <li>
-            <a
-              class="main-navigation-link link"
-              href="https://rknrolla.github.io/goit-markup-hw-01/"
-              >Studio</a
-            >
-          </li>
-          <li>
-            <a
-              class="main-navigation-link link"
-              href="portfolio.html"
-              >Portfolio</a
-            >
-          </li>
-          <li>
-            <a
-              class="main-navigation-link link"
-              href="https://rknrolla.github.io/goit-markup-hw-01/"
-              >Contacts</a
-            >
+          <li class="contact-list-item">
+            <a class="contact-nav-link link" href="tel:+12127724150">
+              <svg class="icon-phone">
+                <use href="./images/icons/icons.svg#icon_mobile"></use>
+              </svg>
+              +1 212-772-4150
+            </a>
           </li>
         </ul>
-        <ul class="contacts-header">
-         <li>
-        <a class="contact-navigation-link space-left link" href="mailto:info@devstudio.com"
-          >info@devstudio.com</a
-        ></li> 
-        <li><a class="contact-navigation-link link" href="tel:+1 212-772-4150"
-          >+1 212-772-4150</a
-        ></li>
-      </ul>
-      </header>
       </div>
-    </section>
-    <section>
-      <div class="container">
-      <nav>
-        <div class="button-list-portfolio">
-          <button type="button" class="button-portfolio">All</button>
-          <button type="button" class="button-portfolio">Web-sites</button>
-          <button type="button" class="button-portfolio">Apps</button>
-          <button type="button" class="button-portfolio">Design</button>
-          <button type="button" class="button-portfolio">Marketing</button>
-        </div>
-       </nav>
-       <ul class="product-list unstyled-list">
-        <li>
-          <img
-            src="images/img.png"
-            alt="minions failed loading"
-            width="370"
-            height="294"
-          />
-          <h4>Technoduck</h4>
-          <p>Web-site</p>
-        </li>
-        <li>
-          <img
-            src="images/img (1).png"
-            alt="minions failed loading"
-            width="370"
-            height="294"
-          />
-          <h4>Poster New Orleans vs Golden Star</h4>
-          <p>Design</p>
-        </li>
-        <li>
-          <img
-            src="images/img (2).png"
-            alt="minions failed loading"
-            width="370"
-            height="294"
-          />
-          <h4>Seafood Restaurant</h4>
-          <p>Apps</p>
-        </li>
-        <li>
-          <img
-            src="images/img (3).png"
-            alt="minions failed loading"
-            width="370"
-            height="294"
-          />
-          <h4>Project Prime</h4>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="images/img (4).png"
-            alt="minions failed loading"
-            width="370"
-            height="294"
-          />
-          <h4>Project Boxes</h4>
-          <p>Apps</p>
-        </li>
-        <li>
-          <img
-            src="images/img (5).png"
-            alt="minions failed loading"
-            width="370"
-            height="294"
-          />
-          <h4>Inspiration has no Borders</h4>
-          <p>Web-site</p>
-        </li>
-        <li>
-          <img
-            src="images/img (6).png"
-            alt="minions failed loading"
-            width="370"
-            height="294"
-          />
-          <h4>Limited Edition</h4>
-          <p>Design</p>
-        </li>
-        <li>
-          <img
-            src="images/img (7).png"
-            alt="minions failed loading"
-            width="370"
-            height="294"
-          />
-          <h4>Project LAB</h4>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="images/img (8).png"
-            alt="minions failed loading"
-            width="370"
-            height="294"
-          />
-          <h4>Growing Business</h4>
-          <p>Apps</p>
-        </li>
-      </ul>
+    </header>
     </div>
-    </section>
+    <main>
+      <section class="portofolio-section line">
+        <div class="container">
+          <h1 class="is_hidden">Portofolio Section</h1>
+          <ul class="portofolio-list-tab unstyled-list">
+            <li class="portofolio-list-tab-item"><button class="portofolio-tab" type="button">All</button></li>
+            <li class="portofolio-list-tab-item"><button class="portofolio-tab" type="button">Web-sites</button></li>
+            <li class="portofolio-list-tab-item"><button class="portofolio-tab" type="button">Apps</button></li>
+            <li class="portofolio-list-tab-item"><button class="portofolio-tab" type="button">Design</button></li>
+            <li class="portofolio-list-tab-item"><button class="portofolio-tab" type="button">Marketing</button></li>
+          </ul>
+          <ul class="portofolio-list unstyled-list">
+              <li class="portofolio-list-item">
+                <img src="./images/img.png" alt="websites-technoduck" width="370" height="294">
+                <div class="card-description">
+                  <h3 class="portofolio-name">Technoduck</h3>
+                  <p class="portofolio-description">Web-site</p>
+                </div>
+              </li>
+              <li class="portofolio-list-item">
+                <img src="./images/img (1).png" alt="Poster New Orlean vs Golden Star" width="370" height="294">
+                <div class="card-description">
+                  <h3 class="portofolio-name">Poster New Orlean vs Golden Star</h3>
+                  <p class="portofolio-description">Design</p>
+                </div>
+              </li>
+              <li class="portofolio-list-item">
+                <img src="./images/img (2).png" alt="Seafood Restaurant" width="370" height="294">
+                <div class="card-description">
+                  <h3 class="portofolio-name">Seafood Restaurant</h3>
+                  <p class="portofolio-description">Apps</p>
+                </div>
+              </li>
+              <li class="portofolio-list-item">
+                <img src="./images/img (3).png" alt="Project Prime" width="370" height="294">
+                <div class="card-description">
+                  <h3 class="portofolio-name">Project Prime</h3>
+                  <p class="portofolio-description">Marketing</p>
+                </div>
+              </li>
+              <li class="portofolio-list-item">
+                <img src="./images/img (4).png" alt="Project Boxes" width="370" height="294">
+                <div class="card-description">
+                  <h3 class="portofolio-name">Project Boxes</h3>
+                  <p class="portofolio-description">Apps</p>
+                </div>
+              </li>
+              <li class="portofolio-list-item">
+                <img src="./images/img (5).png" alt="Inspiration has no Borders" width="370" height="294">
+                <div class="card-description">
+                  <h3 class="portofolio-name">Inspiration has no Borders</h3>
+                  <p class="portofolio-description">Web-site</p>
+                </div>
+              </li>
+              <li class="portofolio-list-item">
+                <img src="./images/img (6).png" alt="Limited Edition" width="370" height="294">
+                <div class="card-description">
+                  <h3 class="portofolio-name">Limited Edition</h3>
+                  <p class="portofolio-description">Design</p>
+                </div>
+              </li>
+              <li class="portofolio-list-item">
+                <img src="./images/img (7).png" alt="Project LAB" width="370" height="294">
+                <div class="card-description">
+                  <h3 class="portofolio-name">Project LAB</h3>
+                  <p class="portofolio-description">Marketing</p>
+                </div>
+              </li>
+              <li class="portofolio-list-item">
+                <img src="./images/img (8).png" alt="Growing Business" width="370" height="294">
+                <div class="card-description">
+                  <h3 class="portofolio-name">Growing Business</h3>
+                  <p class="portofolio-description">Apps</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </section>
+    </main>
+    <!--FOOTER Section-->
+    <footer class="footer-section dark-bg">
+      <div class="container">
+        <a class="logo link" href="index.html">
+          <h2>Web<span>Studio</span></h2>
+        </a>
+        <div class="footer_gen">
+        <address>
+          <ul class="adress-description unstyled-list">
+            <li class="adress-description-item">
+              <a
+                class="contact-link link"
+                href="https://goo.gl/maps/LJvVeoaxAgHyDT5w8"
+                target="_blank"
+                >695 Park Ave, NY 10065, USA</a
+              >
+            </li>
+            <li class="adress-description-item">
+              <a class="contact-link link" href="tel:+12127724150"
+                >+1 212-772-4150</a
+              >
+            </li>
+            <li class="adress-description-item">
+              <a class="contact-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+        </address>
+        <div class="social_media">
+        <h3 id="title_media">Find us on:</h3><br>
+        <ul class="unstyled-list social-list light">
+          <li>
+            <a href="#" target="_blank" class="social-link">
+              <svg class="social-icon">
+                <use href="./images/icons/icons.svg#icon_instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank" class="social-link">
+              <svg class="social-icon">
+                <use href="./images/icons/icons.svg#icon_twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank" class="social-link">
+              <svg class="social-icon">
+                <use href="./images/icons/icons.svg#icon_facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank" class="social-link">
+              <svg class="social-icon">
+                <use href="./images/icons/icons.svg#icon_linkedin2"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        </div>
+        </div>
+      </div>
+    </footer>
   </body>
-  <footer class="footer-bg">
-    <ul class="unstyled-list footer-content">
-      <li class="logo-speish">
-        <a class="logo-highlight link logo-footer" href="index.html"
-          >Web<span class="studio">Studio</span></a
-        >
-      </li>
-      <li>
-        <a class="adress-footer-map link" href="695 Park Ave, NY 10065, USA"
-          >695 Park Ave, NY 10065, USA</a
-        >
-      </li>
-      <li>
-        <a class="adress-footer link" href="mailto:info@devstudio.com"
-          >info@devstudio.com</a
-        >
-      </li>
-      <li>
-        <a class="adress-footer link" href="tel:+1 212-772-4150"
-          >+1 212-772-4150</a
-        >
-      </li>
-    </ul>
-</footer>
 </html>
